fix marketplace flex wrap layout

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -307,6 +307,10 @@ main {
 
 .marketplace-main-bottom-row {
     width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 250px);
+    grid-gap: 1rem;
+    justify-content: space-between;
 }
 
 .product-card {
